feat: page of animation model details

--- a/src/assets/css/Layer.css
+++ b/src/assets/css/Layer.css
@@ -1,11 +1,11 @@
 .a-btn {
   /* display: inline-flex; */
-  background-color: lime;
+  background-color: #b6e6fe;
 }
 
 .t-btn {
   /* display: inline-flex; */
-  background-color: skyblue;
+  background-color: #54ff91;
 }
 
 .n-btn {
