--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,8 @@ body{
   margin-top: 0;
 }
 
+
+
 .horizontal_line{
   border: none;
   height: 1px;  /* thickness */
@@ -74,8 +76,52 @@ body{
 }
 
 .gif-logo-container{
-  width: 100px;
   position: absolute;
-  top: 40px;
-  left: 230px;
+  width: 100px;
+  top: 8%;
+  left: 20%;
+}
+
+.explaination-container {
+  background-color: #fff;
+  box-shadow: 0 29px 32px -20px rgba(0,0,0,.5),0 4px 11px -3px rgba(0,0,0,.25);
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-left: 80px;
+  margin-right: 80px;
+  position: relative;
+  z-index: 4;
+  transition: all .3s ease
+}
+
+.explaination-subcontainer {
+  background-color: #ebebeb;
+  padding: 20px;
+
+  border-radius: 10px;  /* round-corner */
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
+  position: relative;
+  transition: all .3s ease
+}
+
+.explanation-header{
+  text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.explanation-content{
+  text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+
+.light-blue-btn{
+  background-color: #b6e6fe;
+    border-color: #b6e6fe;
 }
