--- a/src/assets/css/Datalink.css
+++ b/src/assets/css/Datalink.css
@@ -1,6 +1,14 @@
 .section_wrapper {
-    text-align: center;
-    margin: 100px;
+    background-color: #fff;
+    box-shadow: 0 29px 32px -20px rgba(0,0,0,.5),0 4px 11px -3px rgba(0,0,0,.25);
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
+    position: relative;
+    z-index: 4;
+    transition: all .3s ease
 }
 
 .centered-image {
